# gihyorustbook

./: LICENSE  README.md
bitonic-sorter/: Cargo.toml  README.md
bitonic-sorter/examples/: benchmark.rs
bitonic-sorter/src/: fourth.rs  second.rs  third.rs  utils.rs
c-api/: Cargo.toml  README.md  a.out  main.c
c-api/src/: lib.rs
cffi-ownership/: Cargo.toml  build.rs
cffi-ownership/c_src/: ownership.c
cffi-ownership/src/: main.rs
ffi-global/: Cargo.toml
ffi-global/src/: main.rs
log-collector/: .env  Cargo.toml  README.md  docker-compose.yml
log-collector/api/: Cargo.toml
log-collector/api/src/: lib.rs
log-collector/cli/: Cargo.toml
log-collector/cli/src/: main.rs
log-collector/server/: Cargo.toml
log-collector/server/migrations/2020-07-17-121127_create_logs/: up.sql
log-collector/server/src/: db.rs  handlers.rs  main.rs
parser/: Cargo.toml
parser/src/: main.rs
start-aw/: Cargo.toml
start-aw/src/: main.rs
static-files/: Cargo.toml
static-files/src/: main.rs
static-link/: Cargo.toml  README.md  build.rs
static-link/c_src/: fib.c
static-link/src/: main.rs
templates/: Cargo.toml
templates/src/: main.rs
wordcount/: Cargo.toml
wordcount/src/: lib.rs  main.rs
wordcount/tests/: char.rs  line.rs
wordcount/tests/utils/: mod.rs
