[package]
name = "server"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.2"
actix-rt = "1.0"
actix-service = "1.0"
actix-web = "2.0"
chrono = "0.4"
csv = "1"
dotenv = "0.13"
env_logger = "0.7"
futures = "0.3"
itertools = "0.8"
log = "0.4"
tempfile = "3"

api = {path = "../api"}

[dependencies.diesel]
features = ["chrono", "postgres", "r2d2"]
version = "1.4"
